--- a/css/index.css
+++ b/css/index.css
@@ -7,6 +7,8 @@ body {
 	text-align: center;
 }
 
+
+
 .arrow{
  	background: url('arrow.jpg');
   	background-size: 30px 30px;
@@ -34,11 +36,38 @@ body {
 	overflow: hidden;
 }
 
+.aboutmecontainer{
+	min-height: 100%;
+	width: 1000px;
+	margin: auto;
+	text-align: left;
+}
+
+.avatar{
+	width: 200px;
+	display: block;
+	margin: 0 auto 20px;
+	text-align: center;
+	border-radius: 50%;
+	padding: 10px;
+	border: 2px dashed 
+}
+
+.bio{
+	max-width: 800px;
+	text-align: center;
+	font-family: "Open Sans","Helvetica Neue Thin",HelveticaNeue-Thin,"helvetica neue",helvetica,arial,"lucida grande",sans-serif;
+	margin: 0 auto;
+	font-size: 20px;
+	font-weight: 700;
+	padding: 30px;
+	line-height: 2;
+}
 
 .experience{
 	background-color: #799EEF;
 	color:#fff;
-	font-family: "Open Sans","Helvetica Neue Thin",HelveticaNeue-Thin,"helvetica neue",helvetica,arial,"lucida grande",sans-serif
+	font-family: "Open Sans","Helvetica Neue Thin",HelveticaNeue-Thin,"helvetica neue",helvetica,arial,"lucida grande",sans-serif;
 	margin: 0 auto;
 	overflow: hidden;
 }
