--- a/css/index.css
+++ b/css/index.css
@@ -21,6 +21,7 @@ body {
   	-webkit-animation:bounce 2s infinite;
 }
 
+/* footer */
 .footer{
 	padding: 25px;
 	height: 100px;
@@ -29,6 +30,7 @@ body {
 	overflow: hidden;
 }
 
+/* about me */
 .aboutme {
 	background-color:white;
 	margin: 0 auto;
@@ -61,6 +63,8 @@ body {
 	line-height: 2;
 	max-width: 875px;
 }
+
+/* experience */
 
 .experience{
 	background-color: #799EEF;
@@ -135,7 +139,7 @@ body {
 	text-align: left;
 }
 
-
+/* introduction*/
 .first {
 	min-height: 476px;
 	display: table;
@@ -163,25 +167,6 @@ body {
 	text-align: center;
 }
 
-
-.picture {
-	text-align: center;
-	padding: 5% 0;
-}
-
-.profilepic {
-    position: relative;
-    max-width:30%;
-	max-height:30%;
-
-    -webkit-border-radius: 50%;
-    -moz-border-radius: 50%;
-    border-radius: 50%;
-
-    -webkit-box-shadow: 0 0 0 3px #fff, 0 0 0 4px #999, 0 2px 5px 4px rgba(0,0,0,.2);
-    -moz-box-shadow: 0 0 0 3px #fff, 0 0 0 4px #999, 0 2px 5px 4px rgba(0,0,0,.2);
-    box-shadow: 0 0 0 3px #fff, 0 0 0 4px #999, 0 2px 5px 4px rgba(0,0,0,.2);
-}
 
 .name {
 	color:white;
@@ -258,6 +243,69 @@ ul.social_bar a:hover {
 	-webkit-transition: all 0.2s ease-in-out; 
 }
 
+/*projects*/
+.projects{
+	background-color:#ECE5C0;
+	font-family: "Open Sans","Helvetica Neue Thin",HelveticaNeue-Thin,"helvetica neue",helvetica,arial,"lucida grande",sans-serif;
+	overflow: hidden;
+	margin: 0 auto;
+}
+
+.projectscontainer{
+	margin: auto;
+	max-width: 875px;
+}
+
+.project{
+	border: 0;
+	display: inline-block;
+	max-height: 200px;
+	max-width: 250px;
+	margin: 1em;
+	opacity: 0.8;
+	overflow: hidden;
+	position: relative;
+	width: 100%;
+	border-radius: 5px;
+}
+
+.projectpic{
+	width: 100%;
+	height: 100%;
+}
+
+.project:hover{
+	opacity: 1;
+}
+
+.caption{
+	padding: 10px;
+	font:inherit;
+	position: absolute;
+	background: rgba(0,0,0,0.60); 
+  	color: white; 
+  	height: 60%;
+
+  	opacity: 0;
+  	left: 0;
+  	bottom: -60%;
+  	-webkit-transition: all 0.3s;
+  	-moz-transition:    all 0.3s;
+  	-o-transition:      all 0.3s;
+}
+
+.project:hover .caption{
+  	opacity: 1;
+  	bottom: 0;
+}
+
+
+
+
+
+
+
+/* otheres */
 .cd-top {
   display: inline-block;
   height: 40px;
