--- a/css/index.css
+++ b/css/index.css
@@ -295,6 +295,11 @@ ul.social_bar a:hover {
   	-o-transition:      all 0.3s;
 }
 
+.ptitle{
+	font-size: 16px;
+	font-weight: 700;
+}
+
 .project:hover .caption{
   	opacity: 1;
   	bottom: 0;
@@ -307,6 +312,7 @@ ul.social_bar a:hover {
 
 
 /* otheres */
+
 .cd-top {
   display: inline-block;
   height: 40px;
