--- a/css/index.css
+++ b/css/index.css
@@ -23,11 +23,17 @@ body {
 
 /* footer */
 .footer{
+	text-align: center;
 	padding: 25px;
-	height: 100px;
+	max-height: 150px;
 	background-color:#434242;
 	margin: 0 auto;
 	overflow: hidden;
+}
+
+.closingtext{
+	color:white;
+	font-size: 1em;
 }
 
 /* about me */
@@ -58,6 +64,7 @@ body {
 	font-family: "Open Sans","Helvetica Neue Thin",HelveticaNeue-Thin,"helvetica neue",helvetica,arial,"lucida grande",sans-serif;
 	margin: 0 auto;
 	font-size: 20px;
+	font-weight: 400;
 	padding: 30px;
 	line-height: 2;
 	max-width: 875px;
