--- a/css/index.css
+++ b/css/index.css
@@ -269,20 +269,19 @@ ul.social_bar a:hover {
 	max-height: 200px;
 	max-width: 250px;
 	margin: 1em;
-	opacity: 0.8;
 	overflow: hidden;
 	position: relative;
 	width: 100%;
 	border-radius: 5px;
+	-webkit-transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s ease-in-out;
+    -o-transition: all 0.3s ease-in-out;
+    -ms-transition: all 0.3s ease-in-out;
 }
 
 .projectpic{
 	width: 100%;
 	height: 100%;
-}
-
-.project:hover{
-	opacity: 1;
 }
 
 .caption{
@@ -359,6 +358,13 @@ ul.social_bar a:hover {
   animation-duration: 2s;
   -webkit-animation-fill-mode: both;
   animation-fill-mode: both;
+}
+
+.zoomin{
+	-webkit-transform: scale(1.1); 
+    -moz-transform: scale(1.1);
+    -o-transform: scale(1.1);
+    transform: scale(1.1);
 }
 
 
