--- a/css/index.css
+++ b/css/index.css
@@ -149,12 +149,15 @@ body {
 .first {
 	display: table;
 	height: 100%;
-	height: 100vh;
 	margin: 0 auto;
 	overflow: hidden;
 	padding-bottom: 4em;
 	text-align: center;
 	width: 100%;
+}
+
+.fullscreenheight{
+	height: 100vh;
 }
 
 .content_container {
