--- a/css/index.css
+++ b/css/index.css
@@ -86,6 +86,7 @@ body {
 	text-align: center;
 	font-family: Montserrat,"Helvetica Neue",Arial,sans-serif;
 	font-weight: 700;
+	min-width: 400px;
 	font-size: 4em;
 	padding: 40px;
 }
