--- a/style/css/index.css
+++ b/style/css/index.css
@@ -7,8 +7,6 @@ body {
 	text-align: center;
 }
 
-
-
 .arrow{
  	background: url('../../images/arrow.jpg');
   	background-size: 30px 30px;
@@ -38,7 +36,7 @@ body {
 
 /* about me */
 .aboutme {
-	background-color:white;
+	background-color:#ECE5C0;
 	margin: 0 auto;
 	overflow: hidden;
 }
@@ -73,7 +71,7 @@ body {
 /* experience */
 
 .experience{
-	background-color: #799EEF;
+	background-color: #49a1a7;
 	color:#fff;
 	font-family: "Open Sans","Helvetica Neue Thin",HelveticaNeue-Thin,"helvetica neue",helvetica,arial,"lucida grande",sans-serif;
 	margin: 0 auto;
@@ -102,7 +100,7 @@ body {
 
 .workplace:hover{
 	border-radius: 10px;
-	background-color: #49a1a7;
+	background-color: #799EEF;
 	-webkit-transform: translateX(5px);
 	-ms-transform: translateX(5px);
 	transform: translateX(5px);
