--- a/style/css/index.css
+++ b/style/css/index.css
@@ -104,6 +104,7 @@ body {
 	-webkit-transform: translateX(5px);
 	-ms-transform: translateX(5px);
 	transform: translateX(5px);
+	transition-duration: 0.6s;
 }
 
 .companyicon{
@@ -149,10 +150,10 @@ body {
 
 /* introduction*/
 canvas {
-	  width: 100%;
-  height: 100%;
-  display: block;
-  vertical-align: bottom;
+	width: 100%;
+  	height: 100%;
+  	display: block;
+  	vertical-align: bottom;
 }
 
 /* ---- particles.js container ---- */
